fixed overflowing tabs

--- a/prosjekt2/src/Test.css
+++ b/prosjekt2/src/Test.css
@@ -61,7 +61,6 @@
   .tab {
     width: 25%;
     background-color: red;
-    height: 100px;
     border: 1px solid #aaa;
   }
 }
